add licensing information

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 <p class="large">Please
 <a href="https://www.enable-javascript.com">enable JavaScript</a>
 to run this game.</p>
-<p>Source code of this game is at
-<a href="https://github.com/sharmaeklavya2/packing-game">
-https://github.com/sharmaeklavya2/packing-game</a>.</p>
+<p>See <a href="https://github.com/sharmaeklavya2/packing-game">
+https://github.com/sharmaeklavya2/packing-game</a> for source code,
+documentation and licensing.</p>
 </noscript>
 <div class="gas"></div>
 <footer id="footer">
@@ -236,9 +236,9 @@ This is a 2D geometric bin-packing game. You have to pack all items
 from the left side into the minimum number of bins on the right side.
             </p>
             <p>
-You can find the source code and documentation of the game at
-<a href="https://github.com/sharmaeklavya2/packing-game">
-https://github.com/sharmaeklavya2/packing-game</a>.
+See <a href="https://github.com/sharmaeklavya2/packing-game">
+https://github.com/sharmaeklavya2/packing-game</a> for source code,
+documentation and licensing.
             </p>
         </div>
     </div>
