--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 <use xlink:href="sprites.svg#fa-plus"/></svg>
             <span class="label">New</span>
         </li>
+        <li id="reload-button" class="disabled" title="Reload">
+            <svg class="icon" id="reload-icon"><title>Reload</title>
+                <use xlink:href="sprites.svg#fa-sync"/></svg>
+            <span class="label">Reload</span>
+        </li>
         <li id="undo-button" class="disabled" title="Undo">
             <svg class="icon" id="undo-icon"><title>Undo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
