Rename 'Clear' button to 'Unpack'

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <use xlink:href="sprites.svg#fa-save"/></svg>
             <span class="label">Save</span>
         </li>
-        <li id="unpack-button" title="Clear">
-            <svg class="icon" id="unpack-icon"><title>Clear</title>
+        <li id="unpack-button" title="Put back">
+            <svg class="icon" id="unpack-icon"><title>Put back</title>
                 <use xlink:href="sprites.svg#fa-broom"/></svg>
-            <span class="label">Clear</span>
+            <span class="label">Unpack</span>
         </li>
         <li id="solutions-button" title="View solution">
             <svg class="icon" id="solutions-icon"><title>View solution</title>
