index.html: rename 'reload' to 'regen'

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <use xlink:href="sprites.svg#fa-plus"/></svg>
             <span class="label">New</span>
         </li>
-        <li id="reload-button" class="disabled" title="Reload">
-            <svg class="icon" id="reload-icon"><title>Reload</title>
+        <li id="reload-button" class="disabled" title="Regen">
+            <svg class="icon" id="reload-icon"><title>Regen</title>
                 <use xlink:href="sprites.svg#fa-sync"/></svg>
-            <span class="label">Reload</span>
+            <span class="label">Regen</span>
         </li>
         <li id="undo-button" class="disabled" title="Undo">
             <svg class="icon" id="undo-icon"><title>Undo</title>
