remove the word 'licensing' in about

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 <a href="https://www.enable-javascript.com">enable JavaScript</a>
 to run this game.</p>
 <p>See <a href="https://github.com/sharmaeklavya2/packing-game">
-https://github.com/sharmaeklavya2/packing-game</a> for source code,
-documentation and licensing.</p>
+https://github.com/sharmaeklavya2/packing-game</a> for source code
+and documentation.</p>
 </noscript>
 <div class="gas"></div>
 <footer id="footer">
@@ -242,8 +242,8 @@ from the left side into the minimum number of bins on the right side.
             </p>
             <p>
 See <a href="https://github.com/sharmaeklavya2/packing-game">
-https://github.com/sharmaeklavya2/packing-game</a> for source code,
-documentation and licensing.
+https://github.com/sharmaeklavya2/packing-game</a> for source code
+and documentation.
             </p>
         </div>
     </div>
