UI: separate the inventory from the packing area

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 <main id="arena" class="item-touch">
     <div id="hover-rect"></div>
     <div id="inventory"></div>
+    <div id="arena-separator"></div>
     <div id="packing-area"></div>
 </main>
 <noscript>
