hide the solutions button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <use xlink:href="sprites.svg#fa-broom"/></svg>
             <span class="label">Unpack</span>
         </li>
-        <li id="solutions-button" title="View solution">
+        <li id="solutions-button" style="display: none;" title="View solution">
             <svg class="icon" id="solutions-icon"><title>View solution</title>
                 <use xlink:href="sprites.svg#fa-eye"/></svg>
             <span class="label">Solution</span>
