add share button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <use xlink:href="sprites.svg#fa-search-pm"/></svg>
             <span class="label">Zoom</span>
         </li>
+        <li id="share-button" title="Share URL">
+            <svg class="icon" id="share-icon"><title>Share URL</title>
+                <use xlink:href="sprites.svg#fa-share-alt"/></svg>
+            <span class="label">Share</span>
+        </li>
         <li id="save-game-button" title="Save game">
             <svg class="icon" id="save-icon"><title>Save game</title>
                 <use xlink:href="sprites.svg#fa-save"/></svg>
