improve URLs for std levels

--- a/index.html
+++ b/index.html
@@ -174,23 +174,23 @@ and documentation.</p>
             <div class="close-btn"></div>
         </header>
         <ul id="ng-list" class="menu-body">
-            <li id="ng-url">Select existing level</li>
+            <li id="ng-hc">Select level</li>
             <li id="ng-gen">Generate level randomly</li>
             <li id="ng-upload">Upload a file</li>
             <li id="ng-json">Enter raw JSON</li>
         </ul>
     </div>
-    <div id="ng-url-menu" class="menu disabled">
+    <div id="ng-hc-menu" class="menu disabled">
         <header>
             <div class="back-btn"></div>
             <div class="heading">Select existing level</div>
             <div class="close-btn"></div>
         </header>
-        <ul id="ng-url-list" class="menu-body">
-            <li data-url="levels/bp/1.json">Level 1</li>
-            <li data-url="levels/bp/2.json">Level 2</li>
-            <li data-url="levels/bp/3.json">Level 3</li>
-            <li data-url="levels/bp/4.json">Level 4</li>
+        <ul id="ng-hc-list" class="menu-body">
+            <li data-name="1">Level 1</li>
+            <li data-name="2">Level 2</li>
+            <li data-name="3">Level 3</li>
+            <li data-name="4">Level 4</li>
         </ul>
     </div>
     <div id="ng-gen-menu" class="menu disabled">
